[tool.poetry]
name = "map-generator"
version = "0.1.0"
description = ""
authors = ["Gideon Grinberg <grinberg1165@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = "^1.20.2"
numba = "^0.53.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
